# appscreen-mcp

./: Dockerfile  LICENSE  README.md  app.js  docker-compose.build.yml  docker-compose.yml  index.html  mcp-bridge.js  package.json
.github/workflows/: docker-publish.yml
mcp-server/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
