[package]
name = "yuzu-shot"
version = "1.0.0"
description = "App Store Screenshot Generator"
authors = ["YUZUHub"]
edition = "2021"

[lib]
name = "yuzu_shot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]
